<resources>
    <string name="av_locations_descr">Gpx file with note locations</string>
    <string name="av_locations">Locations</string>
    <string name="plugin_settings">Plugins</string>
	<string name="routing_attr_avoid_shuttle_train_name">Avoid shuttle train</string>
	<string name="routing_attr_avoid_shuttle_train_description">Avoid shuttle train</string>
    <string name="traffic_warning_hazard">Hazard</string>
    <string name="rendering_value_boldOutline_name">Bold outline</string>
    <string name="no_updates_available">No updates available</string>
    <string name="download_live_updates">Live updates</string>
	<string name="rendering_value_default13_name">Default (13)</string>
	<string name="rendering_value_defaultTranslucentCyan_name">Default (translucent cyan)</string>
    <string name="rendering_attr_currentTrackColor_name">GPX color</string>
    <string name="rendering_attr_currentTrackWidth_name">GPX width</string>
    <string name="rendering_value_red_name">Red</string>
    <string name="rendering_value_translucent_red_name">Translucent red</string>
    <string name="rendering_value_orange_name">Orange</string>
    <string name="rendering_value_translucent_orange_name">Translucent orange</string>
    <string name="rendering_value_yellow_name">Yellow</string>
    <string name="rendering_value_translucent_yellow_name">Translucent yellow</string>
    <string name="rendering_value_lightgreen_name">Light green</string>
    <string name="rendering_value_translucent_lightgreen_name">Translucent light green</string>
    <string name="rendering_value_green_name">Green</string>
    <string name="rendering_value_translucent_green_name">Translucent green</string>
    <string name="rendering_value_lightblue_name">Light blue</string>
    <string name="rendering_value_translucent_lightblue_name">Translucent light blue</string>
    <string name="rendering_value_blue_name">Blue</string>
    <string name="rendering_value_translucent_blue_name">Translucent blue</string>
    <string name="rendering_value_purple_name">Purple</string>
    <string name="rendering_value_translucent_purple_name">Translucent purple</string>
    <string name="restart_is_required">In order to fully apply the changes, a manual application restart is required.</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="lang_pms">Piedmontese</string>
    <string name="lang_bn">Bengali</string>
    <string name="lang_tl">Tagalog</string>
    <string name="lang_sh">Serbo-Croatian</string>
    <string name="lang_az">Azeri</string>
    <string name="lang_br">Breton</string>
    <string name="lang_sq">Albanian</string>
    <string name="lang_is">Icelandic</string>
    <string name="lang_bpy">Bishnupriya</string>
    <string name="lang_nv">Navajo</string>
    <string name="lang_ga">Irish</string>
    <string name="lang_la">Latin</string>
    <string name="lang_ku">Kurdish</string>
    <string name="lang_ta">Tamil</string>
    <string name="lang_ml">Malayalam</string>
    <string name="lang_lb">Luxembourgish</string>
    <string name="lang_os">Ossetian</string>
    <string name="lang_eo">Esperanto</string>
    <string name="lang_es_ar">Argentinean Spanish</string>
    <string name="lang_nb">Norwegian Bokmål</string>
    <string name="lang_vo">Volapuk</string>
    <string name="lang_th">Thai</string>
    <string name="lang_te">Telugu</string>
    <string name="lang_nn">Norwegian (Nynorsk)</string>
    <string name="lang_new">Newar / Nepal Bhasa</string>
    <string name="lang_ms">Malaysian</string>
    <string name="lang_ht">Haitian</string>
    <string name="lang_gl">Galician</string>
    <string name="lang_et">Estonian</string>
    <string name="lang_ceb">Cebuano</string>
    <string name="archive_wikipedia_data">You have old incompatible Wikipedia data downloaded. Do you want to archive it?</string>
    <string name="download_wikipedia_files">Do you want to download additional Wikipedia data (%1$s MB) ?</string>
    <string name="gps_network_not_enabled">Location service is not enabled. Do you want to turn it on?</string>
    <string name="disable_recording_once_app_killed">Prevent standalone logging</string>
    <string name="disable_recording_once_app_killed_descrp">Will pause GPX logging when the app is killed (via recent apps). (OsmAnd Sleep mode indication disappears from the Android notification bar.)</string>
    <string name="shared_string_import2osmand">Import to OsmAnd</string>
    <string name="read_full_article">Read full article (online)</string>
    <string name="download_wikipedia_item">Wikipedia</string>
    <string name="local_indexes_cat_wiki">Wikipedia</string>
    <string name="shared_string_show_details">Show details</string>
    <string name="osm_edit_context_menu_delete">Delete OSM Edit</string>
    <string name="rendering_value_disabled_name">Disabled</string>
    <string name="rendering_value_walkingRoutesScopeOSMC_name">Coloring according to route scope</string>
    <string name="rendering_value_walkingRoutesOSMC_name">Coloring according to OSMC</string>
    <string name="osmo_share_my_location">Share my location</string>
    <string name="shared_string_logoff">Log Off</string>
    <string name="rendering_attr_hideHouseNumbers_name">Hide house numbers</string>
    <string name="application_dir_change_warning3">Do you want OsmAnd to also copy its data files to the new destination?</string>
    <string name="specified_directiory_not_writeable">Maps could not be created in specified directory</string>
    <string name="copying_osmand_file_failed">Copying files failed</string>
    <string name="storage_directory_external">External storage</string>
    <string name="storage_directory_multiuser">Multiuser storage</string>
    <string name="storage_directory_internal_app">Internal application memory</string>
    <string name="storage_directory_manual">Manually specified</string>
    <string name="storage_directory_default">Internal memory</string>
    <string name="application_dir">Data storage folder</string>
    <string name="storage_directory">Map Storage</string>
    <string name="shared_string_copy">Copy</string>
    <string name="filter_poi_hint">Filter by name</string>
    <string name="search_poi_category_hint">Type to search all</string>
    <string name="shared_string_open">Open</string>
    <string name="rendering_attr_OSMMapperAssistant_name">OSM mapper assistant</string>
	<string name="agps_info">A-GPS info</string>
	<string name="shared_string_manage">Manage</string>
	<string name="shared_string_edit">Edit</string>
	<string name="shared_string_places">Places</string>
	<string name="shared_string_search">Search</string>
	<string name="shared_string_show_description">Show description</string>
	<string name="shared_string_message">Message</string>
	<string name="agps_data_last_downloaded">A-GPS data last downloaded: %1$s</string>
    <string name="confirm_usage_speed_cameras">In many countries (Germany, France, Italy, and others) the use of speed camera warnings is not permitted by law. OsmAnd does not assume any liability if you violate the law. Please click yes only if you are eligible to use this feature.</string>
	<string name="welmode_download_maps">Download maps</string>
	<string name="welcome_select_region">To correctly reflect your traffic signs and regulations, please select your driving region:</string>
	<string name="welcome_text">OsmAnd provides global offline map browsing, and global offline navigation!</string>
	<string name="welcome_header">Welcome</string>
    <string name="current_route">Current route</string>
    <string name="osm_changes_added_to_local_edits">OSM changes added to local changeset</string>
   	<string name="mark_to_delete">Mark to delete</string>
	<string name="osmo_grop_name_length_alert">Group name should be at least 3 characters long!</string>
	<string name="local_recordings_delete_all_confirm">You are going to delete %1$d notes. Are you sure?</string>
	<string name="local_osm_changes_upload_all_confirm">You are going to upload %1$d changes to OSM. Are you sure?</string>
    <string name="confirmation_to_clear_history">Do you want to clear the history?</string>
    <string name="delay_to_start_navigation_descr">Specify wait time to remain on the route planning screen</string>
    <string name="delay_to_start_navigation">Start turn-by-turn navigation after…</string>
    <string name="shared_string_go">Go</string>
	<string name="osmand_parking_overdue">overdue</string>
	<string name="action_create">Action create</string>
	<string name="action_modify">Action modify</string>
	<string name="action_delete">Action delete</string>
	<string name="osm_edits">OSM edits</string>
	<string name="osmand_parking_hour">h</string>
	<string name="osmand_parking_minute">min</string>
	<string name="parking_place_limited">Parking time limited to</string>
	<string name="osmand_parking_time_left">left</string>
	<string name="your_edits">Your edits</string>
    <string name="waypoint_visit_after">Visit after</string>
    <string name="waypoint_visit_before">Visit before</string>
    <string name="simulate_your_location">Simulate your position</string>
    <string name="drawer">Flat list</string>
    <string name="short_location_on_map">Lat %1$s\n Lon %2$s</string>
    <string name="tips_and_tricks_descr">Frequently asked questions, recent changes, and others</string>
    <string name="routing_settings_2">Navigation settings</string>
    <string name="general_settings_2">General settings</string>
	<string name="shared_string_ellipsis">…</string>
	<string name="shared_string_ok">OK</string>
	<string name="shared_string_cancel">Cancel</string>
	<string name="shared_string_dismiss">Dismiss</string>
	<string name="shared_string_yes">Yes</string>
	<string name="shared_string_do_not_use">Do not use</string>
	<string name="shared_string_no">No</string>
	<string name="shared_string_on">On</string>
	<string name="shared_string_off">Off</string>
	<string name="shared_string_previous">Previous</string>
	<string name="shared_string_next">Next</string>
	<string name="shared_string_enable">Enable</string>
	<string name="shared_string_disable">Disable</string>
	<string name="shared_string_enabled">Enabled</string>
	<string name="shared_string_disabled">Disabled</string>
	<string name="shared_string_selected">Selected</string>
	<string name="shared_string_selected_lowercase">selected</string>
	<string name="shared_string_never">Never</string>
	<string name="shared_string_none">None</string>
	<string name="shared_string_and">and</string>
	<string name="shared_string_or">or</string>
	<string name="shared_string_help">Help</string>
	<string name="shared_string_settings">Settings</string>
	<string name="shared_string_history">History</string>
	<string name="shared_string_select_on_map">Select on map</string>
	<string name="shared_string_select_all">Select all</string>
	<string name="shared_string_deselect">Deselect</string>
	<string name="shared_string_deselect_all">Deselect all</string>
	<string name="shared_string_clear">Clear</string>
	<string name="shared_string_do_not_show_again">Do not show again</string>
	<string name="shared_string_download">Download</string>
	<string name="sr_plugin_whats_new_title">What\'s New</string>
    <string name="sr_plugin_whats_new_description">
		Version 2.1.0-212
		\n\n• Settings option to simulate a calculated route (default: false)
		\n\n• Fixed some minor bugs
		\n\n\n
		Version 2.1.0-211
		\n\n• Updated to version 2.1
        \n\n• Settings option for using only wifi connection for data upload (default: false)
    </string>
	<string name="sr_plugin_new_version_available">New Version Available</string>
	<string name="sr_plugin_new_version">
		A new version of Happy Navi (OsmAnd) is available. If you would like to install the new version right now click on \'Download\'. If you would like to install the new version later click on \'Cancel\'.
	</string>
</resources>