<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_name_version"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#47D1FF" />

    <TextView
        android:id="@+id/textViewNewVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sr_plugin_new_version_available"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#47D1FF" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#47D1FF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:fadeScrollbars="false"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sr_info_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sr_plugin_new_version"
                android:autoLink="web" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/sr_new_version_download_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shared_string_download" />

        <Button
            android:id="@+id/sr_new_version_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shared_string_cancel" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/sr_new_version_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/shared_string_do_not_show_again" />

</LinearLayout>